# ExecutionEngine

./: CMakeLists.txt  Database.cpp  Database.h  DatalogProgram.h  Lexer.cpp  Lexer.h  Parameter.h  Parser.cpp  Parser.h  Predicate.h  Relation.h  Rule.h  Scheme.h  Token.h  Tuple.h  lab4-opt-rule-eval  main.cpp
lab4-opt-rule-eval.dSYM/Contents/: Info.plist
lab4-opt-rule-eval.dSYM/Contents/Resources/DWARF/: lab4-opt-rule-eval
